--- a/portfolio.css
+++ b/portfolio.css
@@ -78,7 +78,7 @@ body {
 }
 
 .highlight {
-    color: #1C1C1C;
+    color: #ffffff;
 }
 
 .hero p {
@@ -113,7 +113,8 @@ body {
 .about-section img{
     border: 4px solid #440c54;
     border-radius: 50%;
-    height: 20em;
+    height: 25em;
+    width: 20em;
     margin-left: 100px;
     margin-right: 50px;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
